--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://camirojasserantoni.github.io/SCL012-Cipher/src/",
   "name": "cipher",
   "version": "1.0.0",
   "main": "src/index.html",
